成为信息公司的设备

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,5 +130,8 @@
     <string name="version_exit">退出</string>
     <string name="version_not_update">暂不升级</string>
     <string name="version_upgrade_immediately">马上升级</string>
+
+    <string name="btInventory">开始识别</string>
+    <string name="title_stop_Inventory">停止识别</string>
 </resources>
 
